<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellBookActivity"
    app:backgroundTint="@null">


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/button_navigation"
        android:padding="30dp"
        android:scaleType="fitStart"
        android:src="@drawable/backbutton" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_below="@+id/backButton">

        <EditText
            android:id="@+id/editTextTitel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bogtitel"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/editTextForfatter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forfatter"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editTextPris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pris"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/editTextUddannelse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uddannelse"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editTextSemester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/semester"
            android:inputType="number"/>

        <EditText
            android:id="@+id/editTextStand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bogens_stand"
            android:inputType="text"/>

        <Button
            android:id="@+id/btnIndsend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indsend"
            android:background="@drawable/buttonsfullwidth"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</RelativeLayout>